--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "file-saver": "^2.0.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "xlsx": "^0.16.6"
